# botcito

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  README.md  audio_cache.py  autoplay.py  game_agent.py  main.py  music_player.py  pyproject.toml  ratings.py  settings.py  start-all.bat  tts_settings.example.json  voice_recorder.py  youtube.py
.claude/: settings.local.json
.claude/agents/: code-review-expert.md  python-dependency-auditor.md
audit/: __init__.py  app.py  config.py  database.py  environment.py  logger.py  styles.tcss
audit/screens/: __init__.py  music.py  servers.py  users.py
commands/: __init__.py  discover.py  guide.py  helpers.py  music.py  recording.py  stats.py  voice.py
game_agent/: __init__.py  agent.py  agent_factory.py  config.py  environment.py  mcp_client.py  session.py  team_factory.py
ideas/: ai_integrations.md  infrastructure.md  music_providers.md  new_commands.md
music_agent/: __init__.py  agent.py  tools.py
tests/: conftest.py
tests/fixtures/: __init__.py  mocks.py  responses.py  song_data.py
tests/integration/: test_game_agent_flow.py  test_music_flow.py
tests/unit/: test_autoplay.py  test_main.py  test_music_player.py  test_settings.py  test_youtube.py
tests/unit/game_agent/: __init__.py  test_agent.py  test_environment.py  test_mcp_client.py  test_session.py
voice_agent/: __init__.py  chatterbox_tts.py  conversation.py  listener.py  qwen3_tts.py  tts.py
