[project]
name = "discordbotcito"
version = "0.1.0"
description = "Discord music bot with autoplay and Opus streaming"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "discord.py[voice]>=2.6.0,<3.0.0",
    "yt-dlp>=2025.1.0",
    "ytmusicapi>=1.11.0,<2.0.0",
    "python-dotenv>=1.0.0,<2.0.0",
    "agno>=2.3.26",
    "mcp",
    "sqlalchemy",
    "openai>=2.15.0",
    "textual>=7.3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
]

[project.scripts]
audit = "audit:run_audit"

[tool.uv]
package = true

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["audit*", "game_agent*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
]

[tool.coverage.run]
source = [".", "game_agent", "audit"]
omit = ["tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
]
